; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/tificc/extr_tificc.c_TiffFormatterFactory.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/tificc/extr_tificc.c_TiffFormatterFactory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32* }

@CMS_PACK_FLAGS_FLOAT = common dso_local global i32 0, align 4
@cmsFormatterInput = common dso_local global i64 0, align 8
@UnrollTIFFLab8 = common dso_local global i32 0, align 4
@UnrollTIFFLab16 = common dso_local global i32 0, align 4
@PackTIFFLab8 = common dso_local global i32 0, align 4
@PackTIFFLab16 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast ({ i32, i32* } (i32, i32, i64, i32)* @TiffFormatterFactory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal { i32, i32* } @TiffFormatterFactory(i32 %0, i32 %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_3__, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = bitcast %struct.TYPE_3__* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %12, i8 0, i64 16, i1 false)
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @T_BYTES(i32 %13)
  store i32 %14, i32* %10, align 4
  %15 = load i32, i32* %7, align 4
  %16 = ashr i32 %15, 23
  %17 = and i32 %16, 1
  store i32 %17, i32* %11, align 4
  %18 = load i32, i32* %11, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %50

20:                                               ; preds = %4
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* @CMS_PACK_FLAGS_FLOAT, align 4
  %23 = and i32 %21, %22
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %50, label %25

25:                                               ; preds = %20
  %26 = load i64, i64* %8, align 8
  %27 = load i64, i64* @cmsFormatterInput, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %39

29:                                               ; preds = %25
  %30 = load i32, i32* %10, align 4
  %31 = icmp eq i32 %30, 1
  br i1 %31, label %32, label %34

32:                                               ; preds = %29
  %33 = load i32, i32* @UnrollTIFFLab8, align 4
  br label %36

34:                                               ; preds = %29
  %35 = load i32, i32* @UnrollTIFFLab16, align 4
  br label %36

36:                                               ; preds = %34, %32
  %37 = phi i32 [ %33, %32 ], [ %35, %34 ]
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i32 %37, i32* %38, align 8
  br label %49

39:                                               ; preds = %25
  %40 = load i32, i32* %10, align 4
  %41 = icmp eq i32 %40, 1
  br i1 %41, label %42, label %44

42:                                               ; preds = %39
  %43 = load i32, i32* @PackTIFFLab8, align 4
  br label %46

44:                                               ; preds = %39
  %45 = load i32, i32* @PackTIFFLab16, align 4
  br label %46

46:                                               ; preds = %44, %42
  %47 = phi i32 [ %43, %42 ], [ %45, %44 ]
  %48 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i32 %47, i32* %48, align 8
  br label %49

49:                                               ; preds = %46, %36
  br label %50

50:                                               ; preds = %49, %20, %4
  %51 = bitcast %struct.TYPE_3__* %5 to { i32, i32* }*
  %52 = load { i32, i32* }, { i32, i32* }* %51, align 8
  ret { i32, i32* } %52
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @T_BYTES(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
